--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,10 @@
 Package: pgatour2021
-Title: What the Package Does (One Line, Title Case)
+Title: PGA Tour stats for the 2021 season
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Tin", "Hoang", , "tinhoang@yahoo.com", role = c("aut", "cre"))
+Description: Contain data for the PGA Tour 2021 season in 5 primary categories: Putting, Approach the Green, Around the Green, Off the Tee and Scoring
+License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
